fix: fix overflow issues with containers

--- a/src/components/sections/Sequel/styles.module.css
+++ b/src/components/sections/Sequel/styles.module.css
@@ -16,3 +16,21 @@
         padding: 1px 0 1px 0;
     }
 }
+.container {
+    padding: 120px 0 36px 0;
+}
+@media (min-width: 768px) {
+    .container {
+        padding: 130px 48px 36px 48px;
+    }
+}
+@media (min-width: 1024px) {
+    .container {
+        padding: 120px 64px 36px 64px;
+    }
+}
+@media (min-width: 1280px) {
+    .container {
+        padding: 120px 0 36px 0;
+    }
+}
